I create Hero Section
I create Hero Section

--- a/index.html
+++ b/index.html
@@ -10,5 +10,40 @@
   </head>
   <body>
     <!-- Kodlar buraya gelecek -->
+      <!-- ======= Hero Section ======= -->
+    <section class="hero-container">
+      <div class="hero-left-section">
+        <div class="strawberry-box">
+          <span>More Then Faster</span>
+          <div class="strawberry-icon">
+            <img src="images/strawberry.png" class="strawberry-img" />
+          </div>
+        </div>
+        <div class="groceries-fonts">
+          <h1 class="groceries-title">
+            Groceries <br />
+            delivered in as little as
+            <span class="span2hours">2 hours</span>
+          </h1>
+          <p class="groceries-description">
+            Grocen atssures fresh grocery every morning to your family without
+            getting out in this pandemic.
+          </p>
+        </div>
+        <div class="order-buttons">
+          <button class="ordernow-button">Order Now</button>
+          <div class="order-process">
+            <button class="play-button">
+              <i class="fa-solid fa-play" style="color: #ffd43b"></i>
+            </button>
+            <h3 class="order-h3">Order Process</h3>
+          </div>
+        </div>
+      </div>
+      <div class="hero-right-section">
+        <img src="images/SS3.png" alt="header-chef" class="chef-img" />
+      </div>
+    </section>
+     <!-- ======= Hero Section End======= -->
   </body>
 </html>
