--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
     <!-- Fontlar buraya gelecek -->
     <title>Grover</title>
   </head>
@@ -16,7 +21,7 @@
         <div class="strawberry-box">
           <span>More Then Faster</span>
           <div class="strawberry-icon">
-            <img src="images/strawberry.png" class="strawberry-img" />
+            <img src="images/Hero-Section/strawberry.png" class="strawberry-img" />
           </div>
         </div>
         <div class="groceries-fonts">
@@ -41,7 +46,7 @@
         </div>
       </div>
       <div class="hero-right-section">
-        <img src="images/SS3.png" alt="header-chef" class="chef-img" />
+        <img src="images/Hero-Section/SS3.png" alt="header-chef" class="chef-img" />
       </div>
     </section>
      <!-- ======= Hero Section End======= -->
